streamlined getting started instructions

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,17 @@
 # Alpaca
+# 1. create an account here: https://alpaca.markets/
+# 2. select sign up -> trading account
+# 3. go to my account -> settings -> refresh API key and paste the key here
 ALPACA_API_KEY_ID=
 ALPACA_API_SECRET_KEY=
 
 # FRED
+# 1. create an account here: https://fred.stlouisfed.org/
+# 2. select sign up 
+# 3. select your profile icon -> API Keys -> Request API Key and paste the key here
 FRED_API_KEY=
 
-# SEC
+# SEC 
+# replace YourName and ProjectName and your@email.com with your data
+# the API is free but will rate limit you if you abuse it with your credentials 
 SEC_USER_AGENT=YourName ProjectName your@email.com
